--- a/references/hyperbolic.tex
+++ b/references/hyperbolic.tex
@@ -5,7 +5,7 @@
 %% 09/04/2019
 %%
 
-\documentclass[11pt]{article}
+\documentclass[12pt]{article}
 \setlength{\parindent}{0pt}                  % disable indent globally
 
 \RequirePackage[
@@ -30,8 +30,8 @@
 
 \title{Hyperbolic Trig Identities}
 %\author{math2.org}
-\author{Version 1}
-\date{4 September 2019}
+\author{Version 1.1}
+\date{September 4, 2019}
 
 \begin{document}
 
@@ -42,13 +42,8 @@ A compiled list of the most commonly used hyperbolic trig identities. Enjoy. \\
 
 All credits goes to \href{http://math2.org/math/trig/hyperbolics.htm}{math2.org}. If you have comments, corrections, or clarifications, please submit an issue or pull request on \href{https://github.com/chemclub/calculus}{GitHub}.
 
-
+\large
 \section{Hyperbolic Definitions}
-
-\begin{align*}
-& \sinh x = \frac{e^x-e^{-x}}{2} \\ 
-& \operatorname{csch}x = \frac{1}{\sinh x} = \frac{2}{e^x-e^{-x}}
-\end{align*}
 
 \begin{align*}
 & \sinh x = \frac{e^x-e^{-x}}{2} \\
@@ -61,15 +56,15 @@ All credits goes to \href{http://math2.org/math/trig/hyperbolics.htm}{math2.org}
 \end{align*}
 
 \begin{align*}
-& \tanh x = \frac{\sinh x}{\cosh x} = \frac{e^x-e^{-x}}{e^x-e^{-x}} \\
+& \tanh x = \frac{\sinh x}{\cosh x} = \frac{e^x-e^{-x}}{e^x+e^{-x}} \\
 & \operatorname{coth}x = \frac{1}{\tanh x} = \frac{e^x+e^{-x}}{e^x-e^{-x}}
 \end{align*}
 
 
 \begin{align*}
 & \cosh^2x-\sinh^2x = 1 \\
-& \tanh^2x+\operatorname{sech}^2x \\
-& \coth^2x-\operatorname{csch}^2x
+& \tanh^2x+\operatorname{sech}^2x = 1 \\
+& \coth^2x-\operatorname{csch}^2x = 1
 \end{align*}
 
 
@@ -96,7 +91,7 @@ All credits goes to \href{http://math2.org/math/trig/hyperbolics.htm}{math2.org}
 \end{align*}
 
 \begin{align*}
-& \cos z=\cos\left(iz\right) \\
+& \cosh z=\cos\left(iz\right) \\
 & \operatorname{sech}z=\sec\left(iz\right)
 \end{align*}
 
